# sanlam-ingestion-agent

./: .gitignore  pyproject.toml
app/: constants.py  ingest_dlq_producer.py  ingest_logs_producer.py  ingest_producer.py  main.py  util.py
app/kafka/: ingest_dlq_producer.py  ingest_logs_producer.py  ingest_producer.py
